Bug 161006 - changing menu font doesn't change all menus
Summary: changing menu font doesn't change all menus
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-04-19 11:24 UTC by Jonathan Marten
Modified: 2008-07-01 16:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Incorrect font in menu bar pulldown (40.88 KB, image/png)
2008-04-19 11:24 UTC, Jonathan Marten
Details
Incorrect font in context menu (49.62 KB, image/png)
2008-04-19 11:25 UTC, Jonathan Marten
Details
System settings to produce these results (52.85 KB, image/png)
2008-04-19 11:25 UTC, Jonathan Marten
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Marten 2008-04-19 11:24:07 UTC
Version:            (using Devel)
Installed from:    Compiled sources
Compiler:          gcc version 4.2.3 (Gentoo 4.2.3 p1.0)
 
OS:                Linux

After changing the "Menu" font in systemsettings (see screenshot for the settngs used), application menu bars change font as expected.  But the menus pulled down from there don't, they retain the original font before systemsettings was used.  The same applies to popup menus, but not in all applications - briefly:

Dolphin or Konsole - all fonts wrong apart from menu bar
Konqueror - HTML page popup menu correct, toolbar popup wrong
All windows - title bar popup correct, scroll bar popup wrong
Desktop background - popup wrong

The menu body font foes not change even if all applications are closed and restarted, or after logging out and in again.
Comment 1 Jonathan Marten 2008-04-19 11:24:50 UTC
Created attachment 24401 [details]
Incorrect font in menu bar pulldown
Comment 2 Jonathan Marten 2008-04-19 11:25:24 UTC
Created attachment 24402 [details]
Incorrect font in context menu
Comment 3 Jonathan Marten 2008-04-19 11:25:49 UTC
Created attachment 24403 [details]
System settings to produce these results
Comment 4 Tobias Koenig 2008-07-01 16:56:25 UTC
SVN commit 826828 by tokoe:

QPopupMenu doesn't exists any longer, use QMenu instead.
That fixes setting of fonts for menus.

BUG: 161006


 M  +1 -1      kglobalsettings.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=826828