QPopupMenu doesn't exists any longer, use QMenu instead. That fixes setting of fonts for menus.

BUG: 161006

svn path=/trunk/KDE/kdelibs/; revision=826828